@@ -1,5 +1,7 @@
 1997-12-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
+	* DefClass.h (Class_s): Constify name.
+
 	* DefObject.m ([Object_s -describeID:]): Constify displayName.
 
 	* defobj.h: Constify argument to setDisplayName.
